@@ -1,2 +1,3 @@
 require "prototypes.shortcuts"
+require "prototypes.custom-input"
 require "prototypes.style"
