@@ -12,6 +12,7 @@ explanation=Select an item to search
 no-results=No results found
 incorrect-config=At least one checkbox must be selected
 wrong-surface=Can't open map on a different surface
+invalid-item=Selected object must be an item, fluid, or signal
 producers-name=Product
 storage-name=Storage
 requesters-name=Request
